Fix unused function warning in CSSPropertyParserHelpers.cpp https://bugs.webkit.org/show_bug.cgi?id=247025

Unreviewed build fix.

* Source/WebCore/css/parser/CSSPropertyParserHelpers.cpp:

Canonical link: https://commits.webkit.org/255985@main